# lb1

./: LB1.docx  main.py  pyproject.toml
