[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Abysss <romano.ferracini@csbe.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
seaborn = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
